feat: add get users api
